gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/issue21295.d
version https://git-lfs.github.com/spec/v1
oid sha256:d525c9251ab20e60bb14f8b6b55282f68d3827ed480fbe7c1cec6a8b0c2b7860
size 155
